Updated example links

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,11 +38,11 @@ block content
     h3 Example creation output
     code.
       {
-        "original_url": "http://freecodecamp.com/news",
-        "short_url": "https://little-url.herokuapp.com/4"
+        "original_url":"https://www.google.com/",
+        "short_url":"https://little-url.herokuapp.com/2871"
       }
     h3 Usage:
-    code https://little-url.herokuapp.com/4
+    code https://little-url.herokuapp.com/2871
     h3 Will redirect to:
     code.
-        http://freecodecamp.com/news
+        https://www.google.com/
