Change readme and examples

--- a/views/index.jade
+++ b/views/index.jade
@@ -34,12 +34,12 @@ block content
         https://little-url.herokuapp.com/new/https://www.google.com
     br
     code.
-        https://little-url.herokuapp.com/new/http://freecodecamp.com/news
+        https://little-url.herokuapp.com/new/http://foo.com:80
     h3 Example creation output
     code.
       {
-        "original_url":"https://www.google.com/",
-        "short_url":"https://little-url.herokuapp.com/2871"
+        "original_url":"http://foo.com:80",
+        "short_url":"https://little-url.herokuapp.com/8170"
       }
     h3 Usage:
     code https://little-url.herokuapp.com/2871
